test/types/records/typeArgs/argConstraints2.good
argConstraints2.chpl:19: error: ambiguous call 'foo(type R(int(64)))'
argConstraints2.chpl:5: note: candidates are: foo(type t)
argConstraints2.chpl:13: note:                 foo(type t)
